@@ -1,0 +1,96 @@
+<ui version="4.0" >
+ <class>synce_kpm_create_pshipwindow</class>
+ <widget class="QWidget" name="synce_kpm_create_pshipwindow" >
+  <property name="windowModality" >
+   <enum>Qt::ApplicationModal</enum>
+  </property>
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>369</width>
+    <height>330</height>
+   </rect>
+  </property>
+  <property name="windowTitle" >
+   <string>Create Parternship</string>
+  </property>
+  <widget class="QListView" name="viewSyncItems" >
+   <property name="geometry" >
+    <rect>
+     <x>20</x>
+     <y>90</y>
+     <width>331</width>
+     <height>191</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="button_create" >
+   <property name="geometry" >
+    <rect>
+     <x>270</x>
+     <y>290</y>
+     <width>81</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Create</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="button_cancel" >
+   <property name="geometry" >
+    <rect>
+     <x>170</x>
+     <y>290</y>
+     <width>81</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="namePartnership" >
+   <property name="geometry" >
+    <rect>
+     <x>170</x>
+     <y>30</y>
+     <width>181</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="maxLength" >
+    <number>20</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label" >
+   <property name="geometry" >
+    <rect>
+     <x>20</x>
+     <y>30</y>
+     <width>141</width>
+     <height>18</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Name of partnership:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2" >
+   <property name="geometry" >
+    <rect>
+     <x>20</x>
+     <y>70</y>
+     <width>141</width>
+     <height>18</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Sync Items:</string>
+   </property>
+  </widget>
+ </widget>
+ <resources/>
+ <connections/>
+</ui>
