@@ -4,6 +4,8 @@
 	* Some minor changes in GUI desgin
 	* Added support for displaying partnerships 
 	* Added support for removing partnerships
+	* Added support for creating partnerships
+
 
 2008-01-08	Guido Diepen	<guido@guidodiepen.nl>
 
